--- a/w4/styles.css
+++ b/w4/styles.css
@@ -1,39 +1,43 @@
-* {
+body {
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: #000;
-    color: #fff;
-    padding: 1rem 1.5rem;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-h1 {
     text-align: center;
 }
-dl {
-    font-family: 'Times New Roman', Times, serif;
+
+header {
+    background-color: rgb(0, 129, 172);
+    color: whitesmoke;
+    padding: 10px 0;
+    /* border: 10px dashed red; */
 }
 
-.wrapper {
-    margin: 0 auto;
-    padding: .5rem 2rem;
-    width: 60%;
+header li {
+    display: inline-block;
+    margin: -1;
+}
+header li:first-child::after {
+    content: '|';
+    font-weight: bold;
+}
+header li > a {
+    color: unset;
+}
+main {
+    margin: 15px;
+    padding: 15px;
+    background-color: aliceblue;
 }
 
-.wrapper section, h2 {
-    margin-bottom: .88rem;
-}
-p {
-    margin-block: .46rem;
-}
-code > span {
-    color:rgb(165, 213, 255);
+footer {
+    background-color: rgb(205, 236, 255);
+    padding: 10px 0;
 }
 
-a {
-    color:rgb(177, 177, 177);
+label {
+    display: block;
+}
+
+.outline {
+    border: 1px solid #000;
 }
