--- a/p0/blog.css
+++ b/p0/blog.css
@@ -37,3 +37,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1.25rem;
   color: #727272;
 }
+
+#jumbotron-bg {
+  background-image: url('assets/img/jumbotron-bg.jpg');
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+}
