adjust site map layout for mobile

--- a/p0/blog.css
+++ b/p0/blog.css
@@ -181,4 +181,11 @@ footer {
   .border_end-footer {
     border: none;
   }
+  #site-map .wrapper  {
+    width: 90%;
+    margin: 0 auto;
+  }
+  #site-map {
+    background-position: center bottom;
+  }
 }
